# FinanceToolkit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MCP.md  README.md  docker-compose.yml  glama.json  pyproject.toml  requirements.txt  server.json
.github/workflows/: linting.yml  unit_tests.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
examples/: Finance Toolkit - 0. README Examples.ipynb  Finance Toolkit - 1. Getting Started.ipynb  Finance Toolkit - 11. Portfolio Module.ipynb
financetoolkit/: currencies_model.py  fmp_model.py  fundamentals_model.py  helpers.py  historical_model.py  toolkit_controller.py  yfinance_model.py
financetoolkit/discovery/: discovery_controller.py
financetoolkit/economics/: economics_controller.py  gmdb_model.py
financetoolkit/fixedincome/: fixedincome_controller.py
financetoolkit/mcp_server/: SKILL.md  __init__.py  __main__.py  auth_model.py  cache_model.py  coercion_model.py  config.yaml  formatting.py  formatting_model.py  inspection_controller.py  mcp_controller.py  provider.py  provider_model.py  registry.py  registry_controller.py  registry_model.py  server.py  setup_model.py  tools_model.py
financetoolkit/mcp_server/mcpb/: .mcpbignore  README.md  build-mcpb.sh  manifest.json  pyproject.toml
financetoolkit/models/: models_controller.py
financetoolkit/options/: options_controller.py
financetoolkit/performance/: performance_controller.py  performance_model.py
financetoolkit/portfolio/: overview_model.py  portfolio_controller.py  portfolio_model.py
financetoolkit/ratios/: helpers.py  ratios_controller.py
financetoolkit/risk/: risk_controller.py  risk_model.py
financetoolkit/technicals/: technicals_controller.py
tests/: conftest.py  test_normalization_model.py
tests/economics/: conftest.py  test_economics_controller.py
tests/fixedincome/: test_fixedincome_controller.py
tests/fixedincome/csv/test_fixedincome_controller/: test_collect_bond_statistics.csv  test_collect_bond_statistics_1.csv  test_get_derivative_price.csv  test_get_derivative_price_1.csv  test_get_derivative_price_2.csv  test_get_duration.csv  test_get_duration_1.csv  test_get_duration_2.csv  test_get_duration_3.csv  test_get_present_value.csv  test_get_present_value_1.csv  test_get_yield_to_maturity.csv  test_get_yield_to_maturity_1.csv
tests/mcp_server/: test_mcp_controller.py  test_mcp_oauth.py  test_request_auth.py
tests/models/: test_models_controller.py
tests/models/csv/test_models_controller/: test_get_intrinsic_valuation.csv  test_get_intrinsic_valuation_1.csv  test_get_piotroski_score.csv
tests/options/: test_options_controller.py
tests/options/csv/test_options_controller/: test_get_stock_price_simulation.csv  test_get_stock_price_simulation_1.csv
tests/performance/: test_performance_controller.py
tests/performance/csv/test_performance_controller/: test_collect_all_metrics.csv  test_collect_all_metrics_1.csv  test_collect_all_metrics_2.csv  test_get_factor_correlations.csv  test_get_factor_correlations_1.csv  test_get_fama_and_french_model_1.csv  test_get_fama_and_french_model_3.csv  test_get_fama_and_french_model_5.csv  test_get_fama_and_french_model_6.csv  test_get_fama_and_french_model_7.csv
tests/ratios/: test_ratios_controller.py
tests/ratios/csv/test_ratios_controller/: test_collect_custom_ratios.csv  test_collect_custom_ratios_1.csv  test_collect_valuation_ratios_3.csv  test_collect_valuation_ratios_4.csv  test_get_debt_service_coverage_ratio.csv  test_get_dividend_yield_1.csv  test_get_effective_tax_rate.csv  test_get_ev_to_ebit.csv  test_get_ev_to_ebit_1.csv  test_get_price_to_cash_flow_ratio_1.csv  test_get_reinvestment_rate.csv  test_get_weighted_dividend_yield.csv  test_get_weighted_dividend_yield_1.csv
tests/risk/: test_risk_controller.py
tests/risk/csv/test_risk_controller/: test_collect_all_metrics.csv  test_collect_all_metrics_1.csv  test_collect_all_metrics_2.csv
tests/technical/: test_technical_controller.py
tests/technical/csv/test_technical_controller/: test_get_advancers_decliners.csv  test_get_advancers_decliners_1.csv  test_get_advancers_decliners_2.csv  test_get_support_resistance_levels.csv  test_get_support_resistance_levels_1.csv
tests/utilities/: test_logger_model.py
