[project]
name = "financetoolkit"
version = "2.1.1"
description = "Transparent and Efficient Financial Analysis"
license = {text = "MIT"}
authors = [
    { name = "Jeroen Bouma" }
]
readme = "README.md"
homepage = "https://www.jeroenbouma.com/projects/financetoolkit"
repository = "https://github.com/JerBouma/FinanceToolkit"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
keywords = [
    "Finance",
    "Toolkit",
    "Financial",
    "Analysis",
    "Fundamental",
    "Technical",
    "Quantitative",
    "Database",
    "Equities",
    "Currencies",
    "Economics",
    "ETFs",
    "Funds",
    "Indices",
    "Moneymarkets",
    "Commodities",
    "Options"
]
requires-python = ">=3.10, <3.16"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "requests>=2.32",
    "yfinance",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.4.2",
    "mcp[cli]>=1.27.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
financetoolkit-mcp = "financetoolkit.mcp_server.mcp_controller:main"
financetoolkit-mcp-inspector = "financetoolkit.mcp_server.mcp_controller:inspector"
financetoolkit-mcp-setup = "financetoolkit.mcp_server.mcp_controller:setup"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ipykernel>=6.29",
    "black[jupyter]>=26.3.1",
    "codespell>=2.4",
    "pytest-mock>=3.14",
    "pytest-recording>=0.13",
    "pytest-cov>=6.1",
    "pytest-timeout>=2.3",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
    "ruff>=0.13.2",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["financetoolkit"]

[tool.hatch.build.targets.sdist]
include = [
    "financetoolkit/**",
]

[tool.black]
# Current formatting set to Python 3.13
target-version = ["py313"]

[tool.ruff]
line-length = 122
lint.select = [
    "E",   # E: pycodestyle error checks (style errors)
    "W",   # W: pycodestyle warning checks (style warnings)
    "F",   # F: pyflakes checks (possible logic errors, undefined names)
    "Q",   # Q: quote-related checks (enforce consistent quoting rules)
    "W",   # W: duplicate W entry preserved from original configuration
    "S",   # S: security-related checks (bandit-style security rules)
    "UP",  # UP: pyupgrade / modernization fixers and related rules
    "I",   # I: import-related checks (ordering, unused imports)
    "PD",  # PD: plugin-specific or project-defined diagnostics
    "SIM", # SIM: similarity/simplification suggestions (refactoring hints)
    "PLC", # PLC: complexity-related checks (long/complex functions)
    "PLE", # PLE: plugin linting errors (external plugin category)
    "PLR", # PLR: plugin linting rules (external plugin category)
    "PLW", # PLW: plugin linting warnings (external plugin category)
]

lint.ignore = [
    "S105",  # Bandit: possible hardcoded credential/secret
    "S106",  # Bandit: insecure usage pattern (e.g., weak crypto or risky API)
    "S107",  # Bandit: use of eval/exec or other code-injection risk
    "PLR0913",  # Pylint-refactor: too many arguments in function/method
    "PLR0912",  # Pylint-refactor: too many branches in function/method
    "PLR0911",  # Pylint-refactor: too many return statements in function/method
    "PLR0915",  # Pylint-refactor: function/method too many statements (too complex)
    "PD010",  # Docstring/plugin: docstring-related diagnostic (see plugin docs)
    "PD013",  # Docstring/plugin: docstring style/content diagnostic (see plugin docs)
    "S310",  # Bandit: insecure deserialization or risky module usage
    "S301",  # Bandit: insecure crypto/hash or deprecated API usage
    "S101",  # Bandit: use of assert (assert removed in optimized runs)
]

exclude = ["conftest.py"]

[tool.ruff.lint.per-file-ignores]
# HTML template strings contain lines that cannot be wrapped
"financetoolkit/mcp_server/auth_model.py" = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.lint.isort]
profile = "black"
line_length = 122
skip_gitignore = true
combine_as_imports = true

[tool.codespell]
ignore-words-list = 'te,hsi,amplitud,nam,tha,plaform,ine'
skip = '*.json,./.git,pyproject.toml,poetry.lock,examples'

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning:",
]
